// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ErrorBoundaryBox > should render error correctly 1`] = `
<div>
  <div
    aria-label="error-box"
    class="_container_5eeb40"
  >
    <div
      class="_card_5eeb40"
      style="background-color: rgb(255, 255, 255);"
    >
      <div
        class="csdk-flex csdk-justify-center csdk-mb-[10px]"
      >
        <svg
          height="53px"
          viewBox="0 0 53 53"
          width="53px"
        >
          <g
            fill="none"
            fill-rule="evenodd"
            stroke="none"
            stroke-width="1"
          >
            <g>
              <polygon
                fill="#ffcb05"
                points="26.4996 -0.000100000005 -0.000400000001 26.5009 26.4996 52.9999 53.0006 26.5009"
              />
              <path
                d="M24.5,39.054 L24.5,35.054 L28.5,35.054 L28.5,39.054 L24.5,39.054 Z M28.5,31.0536 L24.5,31.0536 L23.5,13.0536 L29.5,13.0536 L28.5,31.0536 Z"
                fill="#FFFFFF"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`ErrorBoundaryBox > should render error with theme settings correctly 1`] = `
<div>
  <div
    aria-label="error-box"
    class="_container_5eeb40"
  >
    <div
      class="_card_5eeb40"
      style="background-color: red;"
    >
      <div
        class="csdk-flex csdk-justify-center csdk-mb-[10px]"
      >
        <svg
          height="53px"
          viewBox="0 0 53 53"
          width="53px"
        >
          <g
            fill="none"
            fill-rule="evenodd"
            stroke="none"
            stroke-width="1"
          >
            <g>
              <polygon
                fill="blue"
                points="26.4996 -0.000100000005 -0.000400000001 26.5009 26.4996 52.9999 53.0006 26.5009"
              />
              <path
                d="M24.5,39.054 L24.5,35.054 L28.5,35.054 L28.5,39.054 L24.5,39.054 Z M28.5,31.0536 L24.5,31.0536 L23.5,13.0536 L29.5,13.0536 L28.5,31.0536 Z"
                fill="#FFFFFF"
              />
            </g>
          </g>
        </svg>
      </div>
      <div
        class="_text_5eeb40"
        style="color: green; font-family: Roboto;"
      >
        errorBoxText
      </div>
    </div>
  </div>
</div>
`;
